crates/toml/tests/snapshots/invalid/string/bad-uni-esc-ml-01.stderr
TOML parse error at line 1, column 30
  |
1 | bad-uni-esc-ml-01 = """val\ue"""
  |                              ^
too few unicode value digits, expected unicode hexadecimal value
